# txline-sentinel

./: .gitignore  LICENSE  Makefile  README.md  convert-phantom-key.mjs  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  db.py  demo.py  logging_config.py  main.py
backend/app/alerts/: __init__.py  dispatcher.py  telegram.py
backend/app/api/: routes_demo.py  routes_events.py  routes_fixtures.py  routes_health.py  routes_matches.py  routes_replay.py  routes_settings.py  routes_signals.py  routes_stream.py
backend/app/explanation/: __init__.py  generator.py  prompts.py  schemas.py  templates.py
backend/app/ingestion/: __init__.py  dashboard_stream.py  event_bus.py  event_processor.py  live_runner.py  normalizer.py  replay_runner.py  snapshot_runner.py  status.py
backend/app/market/: __init__.py  implied_probability.py  rolling_window.py  state.py
backend/app/repositories/: __init__.py  events_repo.py  fixtures_repo.py  replay_repo.py  signals_repo.py
backend/app/signals/: __init__.py  deduplication.py  detector.py  evaluator.py  models.py  scoring.py
backend/app/txline/: __init__.py  auth.py  client.py  historical_jobs.py  historical_replay.py  performance.py  (+2 more)
backend/tests/: conftest.py  test_hardening.py  test_health.py  test_implied_probability.py  test_normalizer.py  test_replay_runner.py  test_signal_engine.py  test_txline_historical_replay.py  test_txline_performance.py
backend/txline_sentinel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+47 files in other folders)
